# kfs

./: .gitignore  Cargo.toml  Makefile  README.md
arch/x86-i386/: boot.asm  gdt.asm  grub.cfg  linker.ld  multiboot_header.asm  x86-i386-kfs.json
docs/: Untitled-2024-12-16-1243.excalidraw  kfs1.excalidraw  kfs2.excalidraw
src/: color.rs  cpu_io.rs  cursor.rs  keyboard.rs  lib.rs  print.rs  vga_screen.rs  vga_screen_manager.rs
src/data_structure/: mod.rs
src/io/: keyboard.rs  mod.rs
src/io/vga/: manager.rs  mod.rs  screen.rs  vga_screen.rs
src/shell/: command.rs  mod.rs
src/shell/command/: mod.rs  print_stack.rs
src/vga/: mod.rs  print.rs  unit.rs
