[package]
name = "kfs-1"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

#TODO: it is claude version, figure out do I need to use the latest one,
# because it has VolatileRef and VolatilePtr structs but not Volatile
[dependencies]
spin = "0.9.8"
volatile = "0.2.6"
lazy_static = { version = "1.0", features = ["spin_no_std"] }